Changed base path

--- a/style/main.scss
+++ b/style/main.scss
@@ -21,7 +21,7 @@ header {
     width: 100vw;
     height: 55vh;
 
-    background-image: url(/img/header.jpg);
+    background-image: url(../img/header.jpg);
     background-size: cover;
     background-position: bottom;
     background-attachment: fixed;
